# Vimba_ASCOM

./: readme.md  user.build.props  vmb_ascom.sln
deadsea-optics/: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
deadsea-optics/src/deadsea_optics/: __init__.py  __main__.py  cli.py  gui.py  main_window.ui  spectroscopy.py  test_plot.py  ui_main_window.py  usb2000.py  usb2000plus.py  usb2000zz.py
deadsea-optics/src/deadsea_optics/resources/: app_icon.icns  app_icon.pxd  create_icons.sh
vmb_ascom/: LocalServer.cs  ReadMe.htm  app.config  frmMain.Designer.cs  packages.config  vmb_ascom.csproj
vmb_ascom/CameraDriver/: CameraDriver.cs  CameraDriver_online_exp_backup.cs  CameraHardware..cs  CameraHardware.cs  SetupDialogForm.cs  SetupDialogForm.designer.cs
vmb_ascom/Properties/: AssemblyInfo.cs
vmb_ascom7/: LocalServer.cs  ReadMe.htm  app.config  packages.config  vmb_ascom7.csproj
vmb_ascom7/CameraDriver/: CameraDriver.cs  CameraHardware.cs  CameraHardware_hardened.cs  SetupDialogForm.cs  SetupDialogForm.designer.cs
vmb_ascom7/Properties/: AssemblyInfo.cs
vmb_ascom7_test/: Program.cs  app.config  packages.config  vmb_ascom7_test.csproj
vmb_test/: Program.cs  vmb_test.csproj
vmb_test_loop/: Program.cs  vmb_test_loop.csproj
vmb_test_loop_ASCOM_unit/: Program.cs
vmb_test_singe_shot/: Logging.cs  SynchronousGrab.cs  SynchronousGrab.csproj
vmb_test_stream/: Program.cs  vmb_test_stream.csproj
vmb_test_stream_ASCOM_unit/: Program.cs  vmb_test_stream_ASCOM_unit.csproj
vmb_test_stream_opencv/: AsynchronousGrabOpenCV.cs  AsynchronousGrabOpenCV.csproj  README.md
